tests/baselines/reference/emitArrowFunctionWhenUsingArguments19(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
emitArrowFunctionWhenUsingArguments19.ts(5,33): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== emitArrowFunctionWhenUsingArguments19.ts (1 errors) ====
    function f() {
        function g() {
            var _arguments = 10;                // No capture in 'g', so no conflict.
            function h() {
                var capture = () => arguments;  // Should trigger an '_arguments' capture into function 'h'
                                    ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
                foo(_arguments);                // Error as this does not resolve to the user defined '_arguments'
            }
        }
    
        function foo(x: any) {
            return 100;
        }
    }